Add support for Spring scheduling

--- a/hazelcast-spring/pom.xml
+++ b/hazelcast-spring/pom.xml
@@ -231,5 +231,11 @@
             <version>${org.springframework.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+            <version>${hamcrest.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
